# pypicpay

./: .flake8  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  conftest.py  pyproject.toml  setup.py  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: python-publish.yml  pythonpackage.yml  pythonpublish.yml  sonarqube.yml
.scannerwork/: report-task.txt
examples/: cancellation.py  notification.py  payment.py  status.py
picpay/: __init__.py  picpay.py
pypicpay/: __init__.py  picpay.py
tests/: test_picpay.py  tests.py
